# ryce-c

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md
src/: bla.h  camera.h  fov.h  input.h  loop.h  main.c  map.h  simplex.h  tui.h  vec.h
